mentions bg transparency fixed, scrollbar corners, code snippet padding fixed

--- a/theme.css
+++ b/theme.css
@@ -673,7 +673,7 @@ textarea { background: transparent !important; }
 
 .chat > .content .messages .message-group .markup pre code.hljs { background: rgba(0, 0, 0, 0.42) !important; color: rgba(255, 255, 255, 0.7) !important; padding: 5px !important; }
 
-.chat > .content .messages .message-group .markup code.inline { background: rgba(255, 255, 255, 0.1) !important; color: rgba(255, 255, 255, 0.7) !important; padding: 0.3em 0.6em; }
+.chat > .content .messages .message-group .markup code.inline { background: rgba(255, 255, 255, 0.1) !important; color: rgba(255, 255, 255, 0.7) !important; padding: 0.1em 0.3em; }
 
 .channel-textarea-upload { border-right-color: rgba(255, 255, 255, 0.1) !important; }
 
@@ -1753,11 +1753,13 @@ div#bd-pub-button:hover { background-color: #43B581 !important; transition: .3s 
 
 .theme-dark .message-group h2 span { color: rgba(255, 255, 255, 0.5); }
 
+.messages-popout { background: rgba(11,25,35,0.9) !important; }
+
 .messages-popout-wrap.themed-popout.recent-mentions-popout { background-color: rgba(0, 0, 0, 0.5); border: 1px solid rgba(0, 0, 0, 0.3); box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2); }
 
 .messages-popout-wrap.themed-popout.undefined { background-color: rgba(0, 0, 0, 0.5); border: 1px solid rgba(0, 0, 0, 0.3); box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2); }
 
-.theme-dark .themed-popout .header { background-color: rgba(0, 0, 0, 0.68); box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2); border-bottom: 2px solid var(--main-color); }
+.theme-dark .themed-popout .header { background-color: rgba(32,80,112,0.9); box-shadow: 0 2px 3px 0 rgba(0, 0, 0, 0.2); border-bottom: 2px solid var(--main-color); }
 
 .theme-dark .themed-popout .footer { background-color: rgba(0, 0, 0, 0.68); border-top: 2px solid var(--main-color); }
 
@@ -2212,20 +2214,14 @@ body,.channel-members .member .member-username { -webkit-font-smoothing: antiali
 .message-text/* .member*/ {-webkit-transition: background-color 0.25s ease-in, border-radius 0.3s cubic-bezier(0.68, -1.25, 0.228, 1.8); transition: background-color 0.25s ease-in, border-radius 0.3s cubic-bezier(0.68, -1.25, 0.228, 1.8); }
 .message-text:hover {background-color: rgba(255, 255, 255, 0.15); border-radius: 3px; }
 
-
 .scroller-wrap .scroller::-webkit-scrollbar-thumb {
-	border:3px solid rgba(57, 57, 59, 1) !important;
-	background-color:#19191b !important;
+	background-color:#205070 !important;
+	border-radius: 0px;
 }
-
-
 .scroller-wrap .scroller::-webkit-scrollbar-track-piece {
 	border:3px solid rgba(255,255,255,0) !important;
 	background-color:#19191b !important;
 }
-
-
-/* priit's modifications start */
 .channel-members h2 {
     padding: 4px 15px;
     width: 180px;
@@ -2235,10 +2231,6 @@ body,.channel-members .member .member-username { -webkit-font-smoothing: antiali
 }
 .user-popout {
     background: rgb(32, 80, 112) !important;
-}
-.scroller-wrap .scroller::-webkit-scrollbar-thumb {
-    border:1px solid rgba(255, 0, 0, 0) !important;
-    background-color:#205070 !important;
 }
 .status-invisible, .status-offline {
     background-color: #999999;
@@ -2251,5 +2243,3 @@ body,.channel-members .member .member-username { -webkit-font-smoothing: antiali
 .user-popout .avatar-wrapper .avatar-popout .status {
     border-radius: 1px;
 }
-/* priit's modifications end */
-
